--- a/html/page1.html
+++ b/html/page1.html
@@ -1,6 +1,5 @@
 <div class="container px-4 px-lg-5">
   <!------ Fej sor: Videó és Szolgáltatás bemutató ------------->
-
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-12">
       <div class="card bg-dark text-white rounded-3 shadow-lg">
@@ -14,7 +13,6 @@
                 A böngésződ nem támogatja ezt a videólejátszót.
               </video>
             </div>
-
 <!--------------Szolgáltatás csomag szűrők------------------->
             <div class="col-lg-6">
               <h1 class="fw-bold display-4 text-warning text-center">
@@ -58,48 +56,66 @@
     </div>
   </div>
 <!---Figyelmeztető szöveg ha nincs a listában---------------->
-<div ng-if="groupedServices.length === 0" class="alert alert-warning text-center mt-3">
+<div ng-if="groupedServices.length === 0" 
+     class="alert alert-warning text-center mt-3">
   Nincs megjeleníthető szolgáltatás a szűrők alapján.
 </div>
-
-<!-- Carousel: Szűrt szolgáltatások -->
-<div id="serviceCarousel" class="carousel slide" data-bs-ride="carousel" ng-if="groupedServices.length > 0">
+<!------------Carousel: Szűrt szolgáltatások----------------->
+<div id="serviceCarousel" 
+     class="carousel slide" 
+     data-bs-ride="carousel" 
+     ng-if="groupedServices.length > 0">
   <div class="carousel-inner">
-    <div class="carousel-item" ng-class="{ active: $index === 0 }" 
+    <div class="carousel-item" 
+         ng-class="{ active: $index === 0 }" 
          ng-repeat="group in groupedServices track by $index">
       <div class="row">
-        <div class="col-md-4" ng-repeat="service in group">
+        <div class="col-md-4" 
+             ng-repeat="service in group">
           <div class="card bg-dark text-white mb-3">
             <div class="ratio ratio-4x3 rounded">
-              <img ng-src="{{service.image}}" class="img-fluid object-fit-cover" alt="{{service.services_name}}">
+              <img ng-src="{{service.image}}" 
+                   class="img-fluid object-fit-cover" 
+                   alt="{{service.services_name}}">
             </div>
             <div class="card-body rounded">
               <h5 class="card-title">{{service.services_name}}</h5>
               <p class="card-text">{{service.description}}</p>
               <p class="fw-bold text-warning text-center">{{service.price | currency:'':0}} Ft</p>
-
-              <!-- Gomb állapotának dinamikus kezelése -->
+<!------------Gomb állapotának dinamikus kezelése---------------------->
               <button 
                 class="btn w-100" 
                 ng-class="isSelected(service) ? 'btn-primary' : 'btn-warning'" 
                 ng-click="toggleSelection(service)">
                 {{ isSelected(service) ? 'Kiválasztva' : 'Időpontot foglalok!' }}
               </button>
-
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#serviceCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Előző</span>
+<!---------------------Carousel gombok------------------->
+  <button class="carousel-control-prev" 
+          type="button" 
+          data-bs-target="#serviceCarousel" 
+          data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" 
+          aria-hidden="true">
+        </span>
+    <span class="visually-hidden">
+      Előző
+    </span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#serviceCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Következő</span>
+  <button class="carousel-control-next" 
+          type="button" 
+          data-bs-target="#serviceCarousel" 
+          data-bs-slide="next">
+    <span class="carousel-control-next-icon" 
+          aria-hidden="true">
+        </span>
+    <span class="visually-hidden">
+      Következő
+    </span>
   </button>
-</div>
 </div>
