--- a/html/footer.html
+++ b/html/footer.html
@@ -1,10 +1,8 @@
-<!--------- Footer------>
-<footer
-  class="footer-custom navbar navbar-expand-sm text-white mt-5 border-primary rounded-3"
->
+<!------------------Footer----------------------------->
+<footer class="footer-custom navbar navbar-expand-sm text-white mt-5 border-primary rounded-3">
   <div class="container w-auto py-4">
     <div class="row justify-items-center">
-      <!-- About section -->
+<!----------------Rólunk szekció ---------------------->
       <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="fw-bold">{{about.title}}</h5>
         <div class="d-flex justify-content-start align-items-center flex-wrap">
@@ -16,9 +14,7 @@
           </a>
         </div>
       </div>
-      
-
-      <!-- Links section -->
+<!-----------Linkek szekció----------------------------->
       <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="fw-bold">Linkek</h5>
         <p ng-repeat="link in links" class="mb-1">
@@ -28,8 +24,7 @@
           </a>
         </p>
       </div>
-
-      <!-- Contact section -->
+<!---------------Kapcsolat szekció----------------------->
       <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="fw-bold">{{contact.title}}</h5>
         <div class="d-flex align-items-center mb-2">
@@ -45,8 +40,7 @@
           <p class="mb-0">{{contact.email}}</p>
         </div>
       </div>
-
-      <!-- Google Maps Section -->
+<!-----------Google Maps szekció------------------------>
       <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="fw-bold">Térkép</h5>
         <div>
