--- a/html/login.html
+++ b/html/login.html
@@ -1,7 +1,7 @@
 <div class="container vh-100 d-flex justify-content-center align-items-center">
   <div class="card shadow-lg text-white col-md-6 col-lg-4" style="border-radius: 15px; overflow: hidden;">
     <div class="row g-0">
-      <!-- Login Form -->
+<!----------------Bejelentkezés form---------------->
       <div 
         class="col-12 p-5 d-flex flex-column justify-content-center"
         ng-style="{'background-image': 'url(' + login_bg + ')', 
@@ -10,20 +10,22 @@
                    'background-repeat': 'no-repeat'}">
         <h3 class="text-center mb-4 text-white">
           <i class="fa-solid fa-right-to-bracket"></i>
-          <span class="text-capitalize ms-2">Bejelentkezés</span>
+          <span class="text-capitalize ms-2">
+            Bejelentkezés
+          </span>
         </h3>
-
-        <!-- Üzenet, ha nincs fiókja -->
+<!---------------Üzenet, ha nincs fiókja----------->
         <p class="text-center text-warning text-decoration-underline mb-3">
           Nincs még fiókja? Kattintson a regisztráció gombra lent!
         </p>
-
-        <form name="loginForm" novalidate>
-          <!-- Email -->
+        <form name="loginForm" 
+              novalidate>
+<!--------------------Email------------------------>
           <div class="mb-3">
             <label for="login-email" class="form-label text-white">
               <i class="fa-solid fa-star fa-2xs text-danger"></i>
-              <i class="fa-solid fa-envelope me-1"></i> E-mail:
+              <i class="fa-solid fa-envelope me-1"></i> 
+              E-mail:
             </label>
             <input
               id="login-email"
@@ -39,12 +41,12 @@
               ng-pattern="/^([a-z0-9_.+-])+\@(([a-z0-9-])+\.)+([a-z0-9]{2,4})+$/"
               ng-disable-space>
           </div>
-
-          <!-- Jelszó -->
+<!-------------Jelszó-------------------------->
           <div class="mb-3">
             <label for="login-password" class="form-label text-white">
               <i class="fa-solid fa-star fa-2xs text-danger"></i>
-              <i class="fa-solid fa-key me-1"></i> Jelszó:
+              <i class="fa-solid fa-key me-1"></i> 
+              Jelszó:
             </label>
             <input
               id="login-password"
@@ -62,8 +64,7 @@
               ng-pattern="/^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,20}$/"
               ng-disable-space>
           </div>
-
-          <!-- Mutat/elrejt jelszó -->
+<!--------------Mutat/elrejt jelszó-------------------->
           <div class="form-check mb-3">
             <input
               id="login-showPassword"
@@ -71,12 +72,12 @@
               type="checkbox"
               ng-init="model.showPassword=false"
               ng-model="model.showPassword">
-            <label for="login-showPassword" class="form-check-label text-white">
+            <label for="login-showPassword" 
+                   class="form-check-label text-white">
               Jelszó mutat
             </label>
           </div>
-
-          <!-- Bejelentkezés és Regisztráció gombok -->
+<!---------Bejelentkezés és Regisztráció gombok------>
           <div class="text-center">
             <button
               type="button"
