--- a/html/register.html
+++ b/html/register.html
@@ -1,7 +1,7 @@
 <div class="container vh-100 d-flex justify-content-center align-items-center my-5">
   <div class="card shadow-lg text-white w-75" style="border-radius: 15px; overflow: hidden;">
     <div class="row g-0">
-      <!-------Regisztráció Form-------------->
+<!-----------------Regisztrációs Form--------------------------->
       <div 
         class="col-12 p-5 d-flex flex-column justify-content-center"
         ng-style="{'background-image': 'url(' + registration_bg + ')', 
@@ -10,17 +10,19 @@
                    'background-repeat': 'no-repeat'}">
         <h3 class="text-center mb-4 text-white">
           <i class="fa-solid fa-id-card"></i>
-          <span class="text-capitalize ms-2">Regisztráció</span>
+          <span class="text-capitalize ms-2">
+            Regisztráció
+          </span>
         </h3>
-
         <form name="registerForm" novalidate>
           <div class="row">
-            <!---------------Bal oldal----------------->
+<!------------------------Bal oldal--------------------->
             <div class="col-md-6">
-              <!--------------Vezetéknév---------------->
+<!------------------------Vezetéknév-------------------->
               <div class="mb-3">
                 <label for="register-last_name" class="form-label text-white">
-                  <i class="fa-solid fa-user me-1"></i> Vezetéknév:
+                  <i class="fa-solid fa-user me-1"></i> 
+                  Vezetéknév:
                 </label>
                 <input 
                   id="register-last_name"
@@ -32,11 +34,11 @@
                   maxlength="100"
                   ng-model="model.register.last_name">
               </div>
-
-              <!----------------Keresztnév---------------------->
+<!-------------------------Keresztnév---------------------->
               <div class="mb-3">
                 <label for="register-first_name" class="form-label text-white">
-                  <i class="fa-solid fa-user me-1"></i> Keresztnév:
+                  <i class="fa-solid fa-user me-1"></i> 
+                  Keresztnév:
                 </label>
                 <input 
                   id="register-first_name"
@@ -48,11 +50,11 @@
                   maxlength="100"
                   ng-model="model.register.first_name">
               </div>
-
-              <!-------------Születési idő---------------------->
+<!--------------------------Születési idő---------------------->
               <div class="mb-3">
                 <label for="register-born" class="form-label text-white">
-                  <i class="fa-solid fa-calendar-days me-1"></i> Születési idő:
+                  <i class="fa-solid fa-calendar-days me-1"></i> 
+                  Születési idő:
                 </label>
                 <input 
                   id="register-born"
@@ -67,11 +69,11 @@
                   ng-clear-icon
                   ng-model="model.register.born">
               </div>
-
-              <!---------------Telefonszám----------------->
+<!--------------------------Telefonszám------------------------->
               <div class="mb-3">
                 <label for="register-phone" class="form-label text-white">
-                  <i class="fa-solid fa-mobile-screen me-1"></i> Telefonszám:
+                  <i class="fa-solid fa-mobile-screen me-1"></i> 
+                  Telefonszám:
                 </label>
                 <div class="input-group">
                   <input
@@ -96,11 +98,11 @@
                     ng-pattern="/^[1-9][0-9]{6,9}$/">
                 </div>
               </div>
-
-              <!-------------Neme------------->
+<!-------------------------Neme-------------------------->
               <div class="mb-3">
                 <label class="form-label text-white">
-                  <i class="fa-solid fa-venus-mars me-1"></i> Neme:
+                  <i class="fa-solid fa-venus-mars me-1"></i> 
+                  Neme:
                 </label>
                 <div class="form-check form-check-inline">
                   <input 
@@ -110,7 +112,10 @@
                     class="form-check-input"
                     value="M"
                     ng-model="model.register.gender">
-                  <label for="register-male" class="form-check-label text-white">Férfi</label>
+                  <label for="register-male" 
+                         class="form-check-label text-white">
+                   Férfi
+                  </label>
                 </div>
                 <div class="form-check form-check-inline">
                   <input 
@@ -120,14 +125,16 @@
                     class="form-check-input"
                     value="F"
                     ng-model="model.register.gender">
-                  <label for="register-female" class="form-check-label text-white">Nő</label>
+                  <label for="register-female" 
+                         class="form-check-label text-white">
+                    Nő
+                  </label>
                 </div>
               </div>
             </div>
-
-            <!---------------Jobb oldal----------------->
+<!---------------------------Jobb oldal------------------------------->
             <div class="col-md-6">
-              <!---------------Email----------------->
+<!-----------------------------Email---------------------------------->
               <div class="mb-3">
                 <label for="register-email" class="form-label text-white">
                   <i class="fa-solid fa-envelope me-1"></i> E-mail:
@@ -141,10 +148,10 @@
                   required
                   ng-model="model.register.email">
               </div>
-
-              <!------------Email megerősítés---------->
+<!-----------------------------Email megerősítés------------------------->
               <div class="mb-3">
-                <label for="register-emailConfirm" class="form-label text-white">
+                <label for="register-emailConfirm" 
+                       class="form-label text-white">
                   E-mail megerősítés:
                 </label>
                 <input 
@@ -156,11 +163,12 @@
                   required
                   ng-model="model.register.emailConfirm">
               </div>
-
-              <!-----------------Jelszó---------------->
+<!-----------------------------Jelszó---------------------------------->
               <div class="mb-3">
-                <label for="register-password" class="form-label text-white">
-                  <i class="fa-solid fa-key me-1"></i> Jelszó:
+                <label for="register-password" 
+                       class="form-label text-white">
+                  <i class="fa-solid fa-key me-1"></i> 
+                  Jelszó:
                 </label>
                 <input 
                   id="register-password"
@@ -173,8 +181,7 @@
                   maxlength="20"
                   ng-model="model.register.password">
               </div>
-
-              <!--------------Jelszó megerősítés------------>
+<!-------------------------Jelszó megerősítés--------------------------->
               <div class="mb-3">
                 <label for="register-passwordConfirm" class="form-label text-white">
                   Jelszó megerősítés:
@@ -190,8 +197,7 @@
                   maxlength="20"
                   ng-model="model.register.passwordConfirm">
               </div>
-
-              <!----------Jelszó mutat elrejt check--------->
+<!------------------------Jelszó mutat elrejt check-------------------->
               <div class="form-check mb-3">
                 <input 
                   id="register-showPassword"
@@ -199,14 +205,14 @@
                   type="checkbox"
                   ng-click="toggleShowPassword()"
                   ng-checked="model.register.showPassword">
-                <label for="register-showPassword" class="form-check-label text-white">
+                <label for="register-showPassword" 
+                       class="form-check-label text-white">
                   Jelszó mutat
                 </label>
               </div>
             </div>
           </div>
-
-          <!----------Regisztráció Gomb----------->
+<!-----------------------Regisztráció Gomb------------------------->
           <div class="text-center">
             <button 
               type="button"
