Html oldalak átnevezése routok beállítása

--- a/html/header.html
+++ b/html/header.html
@@ -43,7 +43,7 @@
         <li class="nav-item mx-1">
           <a
             class="nav-link"
-            ui-sref="page1"
+            ui-sref="services"
             ui-sref-active="active"
             data-bs-toggle="collapse"
             data-bs-target=".navbar-collapse.show">
@@ -57,7 +57,7 @@
         <li class="nav-item mx-1">
           <a
             class="nav-link"
-            ui-sref="page2"
+            ui-sref="about_us"
             ui-sref-active="active"
             data-bs-toggle="collapse"
             data-bs-target=".navbar-collapse.show">
