--- a/html/profile.html
+++ b/html/profile.html
@@ -354,65 +354,57 @@
       <div ng-if="selectedSection === 'schedule'">
         <h3>Időpontfoglalás</h3>
 
-<!--------------Csomagok------------------------>
+        <!-------------- Kiválasztott csomagok ------------------------>
         <div class="mb-4">
-          <label for="package" 
-                 class="form-label">
-                 Válassz egy csomagot:
-            </label>
-          <select 
-            id="package" 
-            class="form-select" 
-            ng-model="selectedPackage">
-            <option value="" disabled selected>
-              Válassz egy csomagot
-            </option>
-            <option ng-repeat="package in packages" value="{{ package.id }}">
-              {{ package.name }} - {{ package.price }} Ft
-            </option>
-          </select>
+          <h3>Kiválasztott csomagok</h3>
+            <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <th>Csomag neve</th>
+                        <th>Ár (Ft)</th>
+                        <th>Művelet</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="service in selectedServices">
+                        <td>{{service.services_name}}</td>
+                        <td>{{service.price | currency:'':0}} Ft</td>
+                        <td>
+                            <button class="btn btn-danger" ng-click="removeFromCart(service)">
+                                Eltávolítás
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
 
-        <!-- Naptár -->
-        <div class="mb-3">
-          <label for="date">Válassz egy dátumot:</label>
-          <input 
-          id="date" 
-          type="date" 
-          class="form-control" 
-          ng-model="selectedDate" 
-          ng-change="logDate()">
-        
-        <p>Kiválasztott dátum: {{ selectedDate }}</p>
-        </div>
-
-        <!-- Időpontok -->
-        <div ng-if="timeSlots.length > 0">
-          <h4>Elérhető időpontok:</h4>
-          <div class="d-flex flex-wrap gap-2">
-            <button
-              ng-repeat="time in timeSlots"
-              ng-click="selectTimeSlot(time)"
-              class="btn"
-              ng-class="{'btn-outline-primary': selectedTime !== time && !bookedSlots.includes(time), 
-                        'btn-primary': selectedTime === time, 
-                        'btn-danger': bookedSlots.includes(time)}"
-              ng-disabled="bookedSlots.includes(time)">
-              {{ time }}
-            </button>
+        <!-------------- Foglalási adatok ---------------------------->
+        <form name="bookingForm" ng-submit="methods.submitBooking()" novalidate>
+          <div class="mb-3">
+            <label for="car_plate">Autó rendszáma</label>
+            <input type="text" id="car_plate" class="form-control" ng-model="booking.car_plate" required>
           </div>
 
-
-          <!-- Foglalás gomb -->
-          <div class="mt-4">
-            <button 
-              class="btn btn-success" 
-              ng-disabled="!selectedTime || !selectedPackage" 
-              ng-click="confirmAppointment()">
-              Foglalás
-            </button>
+          <div class="mb-3">
+            <label for="booking_date">Dátum</label>
+            <input type="date" id="booking_date" class="form-control" ng-model="booking.date" required>
           </div>
-        </div>
+
+          <div class="mb-3">
+            <label>Időpont</label>
+            <div>
+              <button type="button" class="btn btn-secondary m-1" ng-repeat="time in timeSlots" 
+                      ng-disabled="isBooked(time)" ng-click="selectTime(time)">
+                {{time}}
+              </button>
+            </div>
+          </div>
+
+          <form ng-submit="submitBooking()" novalidate>
+            <button type="submit" class="btn btn-primary">Foglalás mentése</button>
+        </form>
+        </form>
       </div>
 
       <!-- Foglalásaim szekció -->
@@ -422,11 +414,26 @@
           <p>Nincsenek foglalások.</p>
         </div>
         <div ng-if="myBookings.length > 0">
-          <ul>
-            <li ng-repeat="booking in myBookings">
-              {{ booking.date }} - {{ booking.time }} - {{ booking.package }}
-            </li>
-          </ul>
+          <table class="table table-dark table-hover">
+            <thead>
+              <tr>
+                <th>Dátum</th>
+                <th>Időpont</th>
+                <th>Csomag</th>
+                <th>Ár</th>
+                <th>Rendszám</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="booking in myBookings">
+                <td>{{ booking.date }}</td>
+                <td>{{ booking.time }}</td>
+                <td>{{ booking.package }}</td>
+                <td>{{ booking.price }} Ft</td>
+                <td>{{ booking.car_plate }}</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
