--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Application components -->
 	<link rel="stylesheet" href="../components/bootstrap/5.3.3/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../components/font-awesome/6.5.2/css/all.min.css">
-  	<link rel="stylesheet" href="./css/app-common.css">
+  	<link rel="stylesheet" href="../common/css/app-common.css">
   	<link rel="stylesheet" href="./css/app.css">
 </head>
 <body ng-app="app" data-bs-theme="dark">
@@ -24,9 +24,8 @@
 	<script src="../components/angular-js/angular-ui-router/1.0.30/js/angular-ui-router.min.js"></script>
 	<script src="../components/moment/2.30.1/js/moment-with-locales.min.js"></script>
 	<script src="../components/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-	<script src="./js/language-angular.js"></script>
-	<script src="./js/app-common.js"></script>
-	<script src="./js/app-form.js"></script>
+	<script src="../common/js/app-common.js"></script>
+	<script src="../common/js/app-form.js"></script>
 	<script src="./js/app.js"></script>
 </body>
 </html>
